--- a/templates/public/public_index.haml
+++ b/templates/public/public_index.haml
@@ -47,19 +47,21 @@
           {{ brand.description }}
 
     .row
-      #lead-form
-        %form{action:'{% ssl_brand_url "public.lead_create" %}', method:'POST'}
-          -csrf_token
+      {% if branding.allow_signups %}
+        #lead-form
+          %form{action:'{% ssl_brand_url "public.lead_create" %}', method:'POST'}
+            -csrf_token
 
-          %fieldset
-            .control-group
-              .controls
-                %nobr
-                  %input.controls{'type':"text", 'name':"email", 'placeholder':"Enter your email.."}
-                  %button.btn.btn-success{type:"submit"}
-                    -trans "Create Account"
-        -if errors
-          %p.text-error {{error_msg}}
+            %fieldset
+              .control-group
+                .controls
+                  %nobr
+                    %input.controls{'type':"text", 'name':"email", 'placeholder':"Enter your email.."}
+                    %button.btn.btn-success{type:"submit"}
+                      -trans "Create Account"
+          -if errors
+            %p.text-error {{error_msg}}
+      {% endif %}
 
     -if not thanks
       %br.clearfix{clear:"both"}
